Add navigation etc.

--- a/about.html
+++ b/about.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Recipes</title>
+  <title>About me</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
+<body>
   <header>
     <nav>
       <div class="header">
         <a href="index.html" class="logo"> Philippine Recipes</a>
         <div class="header-right">
-          <a class="active" href="index.html"><i class="fa-solid fa-house"></i> HOME</a>
+          <a class="active" href="#home"><i class="fa-solid fa-house"></i> HOME</a>
           <a href="about.html">ABOUT</a>
           <a href="recipes.html">RECIPES</a>
           <a href="about.html">START HERE</a>
@@ -24,12 +25,13 @@
   </header>
 
   <hr>
-  <ul>
-    <li> <a href="adobo.html">Pork Adobo</a>
-    </li>
-    <li> <a href="kare-kare.html">Lengua Kare Kare</a>
-    </li>
-    <li><a href="porkbbq.html">Pork Barbeque</a></li>
-  </ul>
+
+  <h1>About me</h1>
+  <h2>Hi, my name is Janvie!</h2>
+  <h3>I'm the creator behind this simple website. I'm a college student at Caraga State University-Cabadbaran Campus and
+    I am currently
+    learning different programming language to enhance my knowledge and Skills.</h3>
+
 </body>
+
 </html>
